# easy-recipe

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
config/: settings.py  urls.py
recipes/: models.py  routes_permissions.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_cookingstep_unique_step_order_per_recipe.py
recipes/serializers/: cooking_step.py  ingredient.py  recipe.py
recipes/tests/: test_api.py  test_models.py
recipes/tests/test_api/: test_get_token.py  test_recipe.py
scripts/: create_user_and_token.py
